@@ -330,6 +330,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP6210D(EXPERIMENTAL)
        Canon PIXMA iP6220D(EXPERIMENTAL)
        Canon PIXMA iP6310D(EXPERIMENTAL)
+       Canon PIXMA iP6320D(EXPERIMENTAL)
        Canon PIXMA iP7100 (EXPERIMENTAL)
        Canon PIXMA iP7500 (EXPERIMENTAL)
        Canon PIXMA iP8100 (EXPERIMENTAL)
@@ -339,6 +340,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP190  (EXPERIMENTAL)
        Canon PIXMA MP210  (EXPERIMENTAL)
        Canon PIXMA MP240  (EXPERIMENTAL)
+       Canon PIXMA MP260  (EXPERIMENTAL)
        Canon PIXMA MP375R
        Canon PIXMA MP470  (EXPERIMENTAL)
        Canon PIXMA MP490  (EXPERIMENTAL)
